Keep image BG color when flattening the image

BUG:406155